force-app/main/default/objects/Stafff__c/Stafff__c.object-meta.xml
<CustomObject>
    <label>Stafff</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Satffs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>