force-app/main/default/objects/Stafff__c/fields/Count_staff__c.field-meta.xml
<CustomField>
    <fullName>Count_staff__c</fullName>
    <label>Branch</label>
    <referenceTo>Branch__c</referenceTo>
    <relationshipLabel>Satffs</relationshipLabel>
    <relationshipName>Satffs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>