force-app/main/default/objects/Stafff__c/fields/PAN_Number__c.field-meta.xml
<CustomField>
    <fullName>PAN_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>PAN Number</label>
    <length>9</length>
    <type>Text</type>
</CustomField>