force-app/main/default/objects/Stafff__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Intern</fullName>
            </value>
            <value>
                <fullName>part-Time</fullName>
            </value>
            <value>
                <fullName>Full-time</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>