force-app/main/default/objects/Stafff__c/fields/years_of_Experince__c.field-meta.xml
<CustomField>
    <fullName>years_of_Experince__c</fullName>
    <label>years of Experince</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>.1/2</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>3+</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>